--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/shy4msund4r"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="https://www.linkedin.com/in/shyamsundarc92"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://bitbucket.org/shyamsundarc92/"><i class="fa fa-bitbucket"></i></a></li>
-					<li><a href="#"><i>Website</i></a></li>
+		    <li><a href="https://bitbucket.org/shyamsundarc92/"><i class="fa fa-bitbucket"></i></a></li>
+		    <li><a href="https://github.com/shyamsundarc92/"><i class="fa fa-github"></i></a></li>
+		    <li><a href="https://shyamsundarc92.github.io"><i>Website</i></a></li>
                 </ul>
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="mailto:shychandrase@cs.stonybrook.edu" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
+            <a class="btn btn-cta-primary pull-right" href="mailto:shyamsundarc92@gmail.com" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
         </div><!--//container-->
     </header><!--//header-->
     
