--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Shyam" />
             <div class="profile-content pull-left">
                 <h1 class="name">Shyam Sundar Chandrasekaran</h1>
-                <h2 class="desc">Software Engineer Intern at Facebook - Menlo Park | MS Computer Science Student at Stony Brook University</h2>   
+                <h2 class="desc">SWE Intern @ Facebook - Menlo Park | MS CS Student at Stony Brook University</h2>   
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/shy4msund4r"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="https://www.linkedin.com/in/shyamsundarc92"><i class="fa fa-linkedin"></i></a></li>
