--- a/index.html
+++ b/index.html
@@ -269,11 +269,10 @@
                         <div class="content">
                             <div class="skillset">
 								<div class="item">
-                                <h4 class="title">Programming Languages:</h4>C, C++, Bash, Python, JavaScript, PHP, SQL, HTML
+                                <h4 class="title">Programming Languages:</h4>C, C++, Bash, Python, JavaScript, D3.JS, DistAlgo, PHP, MySQL, MongoDB, HTML
 								</div>
 								<div class="item">
-								<h4 class="title">Technologies:</h4>Git, SVN, Wireshark, GDB, Linux, Kernel Programming, OS Virtualization, Cloud Infrastructure, 
-								 Computer Networks
+								<h4 class="title">Technologies:</h4>Git, SVN, Wireshark, Linux Kernel Programming, Flask, OS Virtualization, OpenStack and OpenNebula Cloud Infra, Computer Networks
 								 </div>
                             </div>              
                         </div><!--//content-->  
@@ -307,7 +306,7 @@
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><strong>Tamil:</strong></span>
-                                    <span class="level">Native Speaker <br class="visible-sm visible-xs"/><i class="fa fa-star"></i><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i><i class="fa fa-star"></i></i></span>
+                                    <span class="level">Native Speaker <br class="visible-sm visible-xs"/><i class="fa fa-star"></i><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></i></span>
                                 </li><!--//item-->
                             </ul>
                         </div><!--//content-->
