--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						
 						<ul>
 							<li> Ongoing 2 semester long advanced project to develop and manage the SBU CS Dept’s Cloud under the guidance of Prof. Mike Ferdman</li>
-							<li> Add exciting new features at scale while stablizing existing ones and adopting secure computing practices </li>
+							<li> Adding exciting new features at scale while stablizing existing ones and adopting secure computing practices </li>
 						</ul>
 						
 						<h5><strong>Languages/Technologies: </strong> OpenStack, Python, Linux, Virtualization, Networks, Ansible (Basic) </h5>
