--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 							Trichy, Tamil Nadu, India. I graduated First Class with Distinction in 2013.
                          </p>
                         </div><!--//content-->
+			<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="shyamsundarc92"><a class="LI-simple-link" href='https://www.linkedin.com/in/shyamsundarc92?trk=profile-badge'>Shyam Sundar Chandrasekaran</a></div>
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
 				
