--- a/index.html
+++ b/index.html
@@ -313,8 +313,12 @@
                 </aside><!--//section-->
 	    
 	    	<aside class="LinkedIn aside section">
+			 <div class="section-inner">
+			<div class="content">
                 	<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="shyamsundarc92"><a class="LI-simple-link" href='https://www.linkedin.com/in/shyamsundarc92?trk=profile-badge'>Shyam Sundar Chandrasekaran</a></div>
-	    	</aside>
+			</div>
+			</div>
+		</aside>
             </div><!--//secondary-->    
         </div><!--//row-->
     </div><!--//masonry-->
