--- a/index.html
+++ b/index.html
@@ -311,14 +311,14 @@
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
-	    
+	    	<!---
 	    	<aside class="LinkedIn aside section">
 			 <div class="section-inner">
 			<div class="content">
                 	<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="shyamsundarc92"><a class="LI-simple-link" href='https://www.linkedin.com/in/shyamsundarc92?trk=profile-badge'>Shyam Sundar Chandrasekaran</a></div>
 			</div>
 			</div>
-		</aside>
+		</aside>--->
             </div><!--//secondary-->    
         </div><!--//row-->
     </div><!--//masonry-->
